# Rokey_Last-Mile_mini

./: .gitignore  README.md  cvsd.py  my_map.pgm  my_map.yaml
install/: local_setup.sh  setup.sh
log/: latest_build
my_data/train/labels/: _car_0.txt  _car_10.txt  _car_100.txt  _car_101.txt  _car_102.txt  _car_103.txt  _car_104.txt  _car_105.txt  _car_107.txt  _car_109.txt  _car_11.txt  _car_110.txt  _car_111.txt  _car_12.txt  _car_16.txt  _car_17.txt  _car_18.txt  _car_19.txt  _car_23.txt  _car_24.txt  _car_25.txt  _car_27.txt  _car_28.txt  _car_3.txt  _car_30.txt  _car_31.txt  _car_32.txt  _car_35.txt  _car_36.txt  _car_39.txt  _car_4.txt  _car_40.txt  _car_42.txt  _car_43.txt  _car_44.txt  _car_45.txt  _car_46.txt  _car_47.txt  _car_48.txt  _car_50.txt  (+339 more)
my_data/valid/labels/: _car_1.txt  _car_106.txt  _car_13.txt  _car_14.txt  _car_15.txt  _car_2.txt  _car_20.txt  _car_22.txt  _car_26.txt  _car_29.txt  _car_33.txt  _car_37.txt  _car_41.txt  _car_49.txt  _car_5.txt  _car_66.txt  _car_68.txt  _car_74.txt  _car_96.txt  _car_99.txt  _dummy_1.txt  _dummy_16.txt  _dummy_29.txt  _dummy_3.txt  _dummy_32.txt  _dummy_34.txt  _dummy_44.txt  _dummy_5.txt  _dummy_54.txt  _dummy_64.txt  _dummy_72.txt  _dummy_77.txt  _dummy_8.txt  _dummy_86.txt  _green_16.txt  _green_18.txt  _green_20.txt  _green_25.txt  _green_26.txt  _green_3.txt  (+66 more)
output/: output.csv  output.json  statistics.csv
src/c4/: package.xml  setup.cfg  setup.py
src/c4/c4/: 2_3_c_move_labels.py  2_4_c_compare_yolo.py  2_6_a_image_publisher_modified.py  2_6_b_image_subscriber_modified.py  2_6_e_yolo_publisher.py  3_1_a_capture_image.py  3_1_b_cont_capture_image.py  3_4_a_yolov8_obj_det.py  3_4_b_yolov8_obj_det_thread.py  3_4_c_yolov8_obj_det_track.py  3_5_a_depth_checker.py  3_5_b_depth_to_3d.py  3_5_c_depth_to_nav_goal.py  3_5_d_nav_to_person.py  3_5_d_nav_to_person_2.py  4_4_a_nav_to_pose.py  4_4_a_nav_to_pose_copy.py  4_4_d_create_path.py  4_5_b_depth_to_3d.py  4_5_b_depth_to_3d_modified_1.py  4_5_b_depth_to_3d_modified_2.py  4_5_b_depth_to_3d_modified_copy.py  4_5_c_depth_to_nav_goal_origin.py  (+13 more)
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: DetectedObject.msg
src/my_package/: setup.py
(+123 files in other folders)
